# myclaude

./: .env.example  .gitignore  ALL_TASKS_COMPLETE.md  AUTOAGENTS_INTEGRATION.md  AUTOAGENTS_SUMMARY.md  CHAT_MODES.md  CLEANUP_REPORT.md  Cargo.toml  DEEP_RESEARCH.md  DEEP_RESEARCH_STATUS.md  FEATURES_COMPLETE.md  MAINLINE_THEME.md  PROJECT_COMPLETION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  READY.md  SECURITY.md  SKILLS_GUIDE.md  THINKING_DISPLAY.md  TOOL_CALLING.md  WEB_SEARCH.md  fix_sidebar.sh  start.sh  stop.sh  tauri.conf.json  test_autoagents.sh  test_features.sh  test_mainline_theme.sh  香港组织领导力研究报告.md
.claude/plans/: conversation-history-fix.md  memory-system-explained.md  reasoning-trace-testing.md  rig-agent-refactor.md  rig-final-summary.md  rig-migration-complete.md  rig-progress-report.md  todays-updates-summary.md
capabilities/: default.json
icons/: icon.icns
skills/: example_skill.md  web_search_skill.md
src/: agent_manager.rs  code_agent.rs  commands.rs  config.rs  deep_research.rs  general_agent.rs  lib.rs  llm.rs  llm_wrapper.rs  main.rs  mem0.rs  resume_agent.rs  rig_code_agent.rs  rig_deep_research.rs  rig_general_agent.rs  rig_provider.rs  rig_resume_agent.rs  skills.rs  storage.rs  tavily.rs
src/tools/: calculator.rs  file_ops.rs  mod.rs  web_search.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  api.ts  chatModes.ts  index.css  store.ts
ui/src/components/: ArtifactsPanel.tsx  Canvas.tsx  ChatView.tsx  MessageCanvas.tsx  ModeSelector.tsx  PromptsManager.tsx  (+6 more)
(+1 files in other folders)
