[package]
name = "myclaude"
version = "0.1.0"
edition = "2021"

[lib]
name = "myclaude"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
serde_yaml = "0.9"
autoagents = { version = "0.3.7", features = ["openai", "anthropic"] }
autoagents-core = "0.3.7"
autoagents-derive = "0.3.7"
autoagents-llm = "0.3.7"
async-trait = "0.1"
meval = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
